DH: fix scroll on iphone

--- a/wp-content/themes/denholm/scss/components/_page-transition.scss
+++ b/wp-content/themes/denholm/scss/components/_page-transition.scss
@@ -640,32 +640,38 @@
 
 .woocommerce-cart,
 .woocommerce-checkout {
+  @include susy-media(mobileOnly) {
+    overflow: auto;
+  }
+
   .page-transition__logo {
     @include susy-media(mobileOnly) {
       display: block;
+      position: fixed;
+      top: 0;
+      left: 0;
+      padding: 15px 40px;
+      z-index: 100;
+      width: 100%;
+      background: $white;
     }
 
     a {
       @include susy-media(mobileOnly) {
-        top: 20px;
-        left: 20px;
         font-size: 28px;
-        position: fixed;
+        position: relative;
+        top: 0;
+        left: 0;
       }
     }
   }
 
   .main-content {
-    @include susy-media(mobileOnly) {
-      height: 100vh;
-      overflow: hidden;
-    }
-
     .content-inner {
       @include susy-media(mobileOnly) {
-        margin-top: 60px;
-        height: calc(100vh - 60px);
-        margin-top: 60px;
+        padding-top: 60px;
+        height: auto;
+        max-height: inherit;
       }
     }
   }
